--- a/Documents/JJPictures/reactSite1/my-new-app/src/pages/Work.css
+++ b/Documents/JJPictures/reactSite1/my-new-app/src/pages/Work.css
@@ -1,5 +1,5 @@
 .work {
-  padding: 20px;
+  padding: 100px 20px 20px;
   font-family: Arial, sans-serif;
 }
 
@@ -20,16 +20,22 @@
   text-align: center;
 }
 
-.video-section img {
-  max-width: 100%;
-  height: auto;
-}
-
-.video-section p {
-  margin-top: 10px;
-  font-size: 1em;
-}
-
 .video-section:last-child {
   margin-right: 0;
+}
+
+.video-wrapper {
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  position: relative;
+  overflow: hidden;
+  height: 0;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
